<resources>
    <string name="app_name" translatable="false">XCards</string>
    <string name="start_training">Start training</string>
    <string name="for_owners_of_accounts"><u>I already have an account</u></string>
    <string name="create_flashcards">Create flashcards to memorize or learn</string>
    <string name="time" translatable="false">20:30</string>
    <string name="date">Nov, 20 Sunday</string>
    <string name="motivation_phrase">You don\'t have much left to achieve your goal, you can do it!</string>
    <string name="now">Just Now</string>
    <string name="set_reminders">Set reminders and hard repetitions  (new function)</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign">Sign</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sign_in_to_access">sign in to access your account</string>
    <string name="next">Next</string>
    <string name="invalid_data">Fill in all the cells!</string>
    <string name="no_matching_passwords">Password and confirm password do not match</string>
    <string name="server_failed">Singed up failed! Try again later, please.</string>
    <string name="create_account">by creating an new account</string>
    <string name="full_name">Full name</string>
    <string name="have_not_account"><u>I have not an account yet</u></string>
    <string name="authorization_problem">Some problems with authorization. Ty again later, please.</string>
    <string name="chart_shortened">Chart</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="language">Language</string>
    <string name="themes">Themes</string>
    <string name="theme_explanation">Choose between two color schemes in which to experience the app.</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="reminders">Reminders</string>
    <string name="reminder_explanation">Get a daily learing reminder so you never forget.</string>
    <string name="hard_repetitions">Hard repetitions</string>
    <string name="set_goal">Set a goal</string>
    <string name="chart">Chart</string>
    <string name="searching_modules">Find the study module...</string>
    <string name="all_cards">All cards</string>
    <string name="module_name">Module name</string>
    <string name="recommended">Recommended</string>
    <string name="study_room">Study room</string>
    <string name="activate_reminder">Activate reminder</string>
    <string name="reminders_explanation">Get a reminder to complete your daily goal. You will receive notifications if you don’t achieve your daily goal by the time you’ve set.</string>
    <string name="set_time">Set the time for the reminder</string>
    <string name="set_time_explanation">Set your learning reminder not for the time you want to learn, but rather the is chance in the day you could learn if you have already forgotten to do so.</string>
    <string name="set_day">Set the day for the reminder</string>
    <string name="set_day_advice">It is recommended to study a little every day.</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="hours_for_week">hours for this week</string>
    <string name="correct_answers">Correct answers</string>
    <string name="plus" translatable="false">+</string>
    <string-array name="languages">
        <item>English</item>
        <item>Russian</item>
    </string-array>
    <string name="creating_new_cards">Creating new cards</string>
    <string name="card" translatable="false">Card</string>
    <string name="place_for_question_with_mark">Place for your question?</string>
    <string name="place_for_answer">Place for your answer.</string>
    <string name="save">Save</string>
    <string name="activate_hard_repetitions">Activate hard repetitions</string>
    <string name="explanation_hard_repetitions">The application window will take up the screen and you will need to pass the test you selected in order to continue using the phone. You can also close the app by clicking on the cross if the time is inconvenient.</string>
    <string name="set_time_for_hard_repetitions">Set the time</string>
    <string name="set_day_for_hard_repetitions">Set the day of week</string>
    <string name="choose_training_module">Choice a training module</string>
    <string name="place_for_question">This is the place for a question.</string>
    <string name="instruction">If you remember the answer, swipe right. Otherwise - left.</string>
    <string name="answer_honestly">Answer honestly, please.</string>
    <string name="place_for_fact">A fact about you or something else for flashback.</string>
    <string name="other_side_with_answer">The other side with answer</string>
    <string name="on_successful_creation_collection">The collection was successfully created and saved</string>
    <string name="on_collection_creation_failed">Collection creation failed</string>
    <string name="updates_saved_successfully">Updates saved successfully</string>
    <string name="save_updates_failed">Save updates failed</string>
    <string name="error_collection_name_is_empty">Collection name cannot be empty</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="nothing_found">Nothing found</string>
    <string name="notification_title">Reminder from XCards</string>
    <string name="dont_remember">Don\'t \n remember</string>
    <string name="remember">Remember</string>
    <string name="module_is_finished">Module \n is finished!</string>
    <string name="start_over_again">Start over again</string>
    <string name="repeat_the_forgotten">Repeat the forgotten</string>
</resources>