<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/background"
    tools:context=".presentation.HardRepetitionsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <ImageView
        android:id="@+id/turnBackButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/icon_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView33"
        style="@style/textStyle_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/hard_repetitions"
        app:layout_constraintStart_toEndOf="@+id/turnBackButton"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <TextView
        android:id="@+id/textView30"
        style="@style/textStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/activate_hard_repetitions"
        app:layout_constraintEnd_toStartOf="@+id/switchForReminders"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchForReminders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:trackTint="@drawable/switch_track_selector"
        app:thumbTint="@drawable/switch_thumb_selector"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <TextView
        android:id="@+id/textView32"
        style="@style/miniTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/explanation_hard_repetitions"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <View
        android:id="@+id/viewLine1"
        android:background="@color/gray"
        android:layout_width="330dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textView32" />

    <TextView
        android:id="@+id/settingTime"
        style="@style/grayTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/set_time_for_hard_repetitions"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/viewLine1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonViewHours"
        style="@style/bigImmutableTextStyle"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:elevation="0dp"
        android:enabled="false"
        android:text="20"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/settingTime" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonViewMinutes"
        style="@style/bigImmutableTextStyle"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:elevation="0dp"
        android:enabled="false"
        android:text="00"
        app:cornerRadius="12dp"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/settingTime" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <View
        android:id="@+id/viewLine2"
        android:background="@color/gray"
        android:layout_width="330dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/buttonViewHours" />

    <TextView
        android:id="@+id/settingDaysOfWeek"
        style="@style/grayTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/set_day_for_hard_repetitions"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/viewLine2" />

    <TextView
        android:id="@+id/settingDaysOfWeekAdvise"
        style="@style/miniGrayTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/set_day_advice"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/settingDaysOfWeek" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/transparent"
        android:elevation="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingDaysOfWeekAdvise">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/MondayCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/textMonday"
                style="@style/immutableTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/lilac"
                android:padding="5dp"
                android:text="@string/monday" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/TuesdayCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/textTuesday"
                style="@style/immutableTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/lilac"
                android:padding="5dp"
                android:text="@string/tuesday" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/WednesdayCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/textWednesday"
                style="@style/immutableTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/lilac"
                android:padding="5dp"
                android:text="@string/wednesday" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/ThursdayCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/textThursday"
                style="@style/immutableTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/lilac"
                android:padding="5dp"
                android:text="@string/thursday" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/FridayCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/textFriday"
                style="@style/immutableTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/lilac"
                android:padding="5dp"
                android:text="@string/friday" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/SaturdayCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/textSaturday"
                style="@style/immutableTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/lilac"
                android:padding="5dp"
                android:text="@string/saturday" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/SundayCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/textSunday"
                style="@style/immutableTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/lilac"
                android:padding="5dp"
                android:text="@string/sunday" />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <View
        android:id="@+id/viewLine3"
        android:layout_width="330dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <TextView
        android:id="@+id/choiceTrainingModule"
        style="@style/grayTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/choose_training_module"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/viewLine3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewForMiniCards"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/choiceTrainingModule" />
</androidx.constraintlayout.widget.ConstraintLayout>